<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_back"
    >

    <include
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="65dp"
        android:layout_width="match_parent"
        android:background="@color/primary_back"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">


            <SeekBar
                android:id="@+id/wordsPerDaySeekBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/minusCount"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/minu"
                    android:contentDescription="@string/minus_count" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp"/>


                <TextView
                    android:id="@+id/wordCount"
                    android:textSize="30sp"
                    android:textColor="@color/primary_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp"/>

                <ImageButton
                    android:id="@+id/plusCount"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/add"
                    android:contentDescription="@string/plus_count" />
            </LinearLayout>

            <Space android:layout_width="0dp" android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/native_language"
                android:textAlignment="center"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />


            <Spinner
                android:id="@+id/nativeLangSpinner"
                android:layout_width="@dimen/input_width"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="@drawable/button_back"
                />

            <Space android:layout_width="0dp" android:layout_height="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning_language"
                android:textAlignment="center"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/learningLangSpinner"
                android:layout_width="@dimen/input_width"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="@drawable/button_back"
                />

            <Space android:layout_width="0dp" android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_cefr_level"
                android:textAlignment="center"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/cefrLevelSpinner"
                android:layout_width="@dimen/input_width"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/button_back"
                android:textAlignment="center" />

            <Space android:layout_width="0dp" android:layout_height="10dp"/>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/primary_back"
        android:textSize="36sp"
        app:backgroundTint="@null"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>